# Evidence-Council-Scoring-System

./: .gitignore  CHANGELOG.md  CI.yml  CONTRIBUTING.md  Evaluator.py  LICENSE  README.md  __init__.py  knowledge_layer.py  pyproject.toml  scoring.md
DEMO/: DOCKERfile.md  Docker-Demo-README.md  Docker_demo_evidence_council.py  README.md  demo_evidence_council.py  governance_knowledge_layer_demo.jsonl
evidence_council_slide/: index.html  package.json
evidence_council_slide/src/: App.jsx  app.JSX  main.jsx
reviewer/: __init__.py  tasks.py
reviewer/ui/: mc_simulator.jsx  reviewer-ui.jsx
scoring/: __init__.py  bootstrap_ci.py  composite.py  monte_carlo_error.py
tests/: test_bootstrap_ci.py  test_evaluator.py  test_knowledge_layer.py  test_monte_carlo_error.py  text_composite.py
