[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evidence-council"
version = "0.1.0"
description = "Exhaustive evidence layer governance — bootstrap CI scoring, composite ranking, and human/agent review council for AI evaluation pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "governance",
    "ai-safety",
    "llm-evaluation",
    "confidence-interval",
    "probe-evaluation",
    "garak",
    "healthcare-ai",
    "audit",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
garak = [
    # Install when using with garak probe pipelines
    # garak is not on PyPI; install separately from github.com/NVIDIA/garak
]

[project.urls]
Homepage     = "https://github.com/BrianMGreen2/evidence-council"
Repository   = "https://github.com/BrianMGreen2/evidence-council"
Issues       = "https://github.com/BrianMGreen2/evidence-council/issues"
Changelog    = "https://github.com/BrianMGreen2/evidence-council/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["evidence_council"]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (encourages type hints)
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # skip annotation enforcement in tests

# ---------------------------------------------------------------------------
# Mypy (type checking)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=evidence_council --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
